# Course-GenomeMapper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: CMakeLists.txt  crimson_alignment_engine.cpp  crimson_alignment_engine.hpp  crimson_mapperConfig.h.in  crimson_minimizer_engine.cpp  crimson_minimizer_engine.hpp
src/: CMakeLists.txt  crimson_mapper.cpp
test/: CMakeLists.txt  alignment_test.cpp  empty_test.cpp  minimizer_test.cpp
